Fix the switch jumping up and down.

--- a/x-pack/plugins/remote_clusters/public/index.scss
+++ b/x-pack/plugins/remote_clusters/public/index.scss
@@ -17,3 +17,14 @@
   max-width: 1000px !important; /* 1 */
   width: 100% !important; /* 1 */
 }
+
+/**
+ * 1. Override EuiFormRow styles. Otherwise the switch will jump around when toggled on and off,
+ *    as the 'Reset to defaults' link is added to and removed from the DOM.
+ * 2. Fix the positioning.
+ */
+
+.remoteClusterSkipIfUnavailableSwitch {
+  justify-content: flex-start !important; /* 1 */
+  padding-top: $euiSizeS !important;
+}
